# caikit-nlp

./: pyproject.toml  tox.ini
caikit_nlp/modules/text_generation/: text_generation_llama_cpp.py  text_generation_local.py
