[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]

[project]
name = "caikit-nlp"
dynamic = ["version"]
description = "Caikit NLP"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.9"
classifiers=[
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "caikit[runtime-grpc,runtime-http]>=0.26.12,<0.27.0",
    "caikit-tgis-backend>=0.1.27,<0.2.0",
    # TODO: loosen dependencies
    "accelerate>=0.22.0",
    "datasets>=2.4.0",
    "huggingface-hub",
    "numpy>=1.22.4",
    "pandas>=1.5.0",
    "scikit-learn>=1.1",
    "scipy>=1.8.1",
    "sentence-transformers>=2.3.1,<2.4.0",
    "tokenizers>=0.13.3",
    "torch>=2.0.1",
    "tqdm>=4.65.0",
    "transformers>=4.32.0",
    "peft==0.6.0",
]

[project.optional-dependencies]

## User extra sets ##

llama-cpp = [
    "llama-cpp-python>=0.2.55,<0.3",
]

all = [
    "caikit-nlp[llama-cpp]",
]

## Dev extra sets ##

dev-test = [
    "evaluate", # Currently used for sample scripts etc.
    "pytest==7.1.3",
    "pytest-cov>=2.10.1,<3.0",
    "pytest-html>=3.1.1,<4.0",
    "wheel>=0.38.4",
]

dev-fmt = [
    "pre-commit>=3.0.4,<4.0",
    "pylint>=2.16.2,<3.0",
]

all-dev = [
    "caikit-nlp[all, dev-test, dev-fmt]"
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false


[tool.setuptools_scm]
version_file = "caikit_nlp/_version.py"

[project.urls]
Source = "https://github.com/caikit/caikit-nlp"
